# yamcs-gateway

./: .gitignore  Cargo.toml  LICENSE  README.md
mil1553/: Cargo.toml  wrapper.h
mil1553/src/: ecss.rs  lib.rs  mil1553dev.rs
proto/: pvalue.proto  ygw.proto
py-relay/: client.py
py-relay/proto_out/: ygw_pb2.py
quickstart/: Cargo.toml
quickstart/src/: main.rs  mynode.rs
ygw/: Cargo.toml  LICENSE  README.md  build.rs
ygw-macros/: Cargo.toml
ygw-macros/src/: lib.rs
ygw-mil1553/: Cargo.toml  README.md
ygw-mil1553/src/: lib.rs  mil1553dev.rs
ygw-plugin/: .classpath  .project  README.md  pom.xml
ygw-plugin/distribution/: release.sh
ygw-plugin/proto/: ygw.proto
ygw-plugin/src/main/: proto
ygw-plugin/src/main/java/org/yamcs/ygw/: ParameterPool.java  ProtoBufUtils.java  ProtoConverter.java  README  ReplayMemento.java  TcFrameHandler.java  YgwCommandManager.java  YgwLink.java  YgwNodeLink.java  YgwParameterManager.java  YgwPlugin.java  YgwReplayLink.java
ygw-plugin/src/main/yamcs/etc/: logging.properties  processor.yaml  yamcs.yaml  yamcs.ygw.yaml
ygw-plugin/src/main/yamcs/mdb/: ygw.xml
ygw/proto/: commanding.proto  events.proto  yamcs.proto  ygw.proto
ygw/src/: lib.rs  msg.rs  protobuf.rs  record_file.rs  recorder.rs  replay_server.rs  tc_udp.rs  tm_udp.rs  utc_converter.rs  ygw_server.rs
ygw/src/nodes/: pingnode.rs  relay_node.rs  shellcmd.rs  tc_udp.rs  tm_udp.rs  tmtc_serial.rs  ygw_socketcan.rs
