[package]
name = "ygw"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
prost = "0.12.4"
prost-types = "0.12.4"
byteorder= "1"
thiserror = "1"
env_logger = "0.11"
log = "0.4"
tokio = { version = "1", features = ["full"]}
tokio-util = {version = "0.7", features = ["codec"]}
tokio-stream = "0.1"
yaml-rust = "0.4.5"
async-trait = "0.1.78"
futures = "0.3.30"

[build-dependencies]
prost-build = { version = "0.12.4" }
