[package]
name = "ygw"
version = "0.5.8"
edition = "2021"
license = "MIT"
description = "The goal of Yamcs Gateway is to allow Yamcs to control instruments/payloads as part of an EGSE."
homepage = "https://github.com/xpromache/yamcs-gateway"
repository = "https://github.com/xpromache/yamcs-gateway"
keywords = ["Yamcs", "EGSE", "Satellite", "Spacecraft"]
categories = ["aerospace"]

[features]
# Enables support for sending/receiving CAN frames via a socketcan interface
socketcan = ["dep:socketcan"]
ping=["surge-ping", "rand"]

[dependencies]
bytes = "1"
prost = "0.12.4"
prost-types = "0.12.4"
byteorder= "1"
thiserror = "1"
env_logger = "0.11"
log = "0.4"
tokio = { version = "1", features = ["full"]}
tokio-util = {version = "0.7", features = ["codec"]}
tokio-stream = "0.1"
yaml-rust = "0.4.5"
async-trait = "0.1.78"
futures = "0.3.30"
zstd = "0.13.1"

socketcan = {version="3.3.0", features=["tokio"], optional = true}
surge-ping = {version = "0.8.1", optional = true}
rand = {version = "0.8", optional =  true}

[build-dependencies]
prost-build = { version = "0.12.4" }

[dev-dependencies]
tempfile = "3.10.1"

